[gd_scene load_steps=10 format=3 uid="uid://c4alpqqg2f8du"]

[ext_resource type="PackedScene" uid="uid://cw7bk6aehofv8" path="res://Scenes/player.tscn" id="1_rqn8p"]
[ext_resource type="Script" path="res://Scenes/EnemySpawner.gd" id="2_chj1s"]
[ext_resource type="Texture2D" uid="uid://cnf1idqfwjmna" path="res://Sprites/Worlds/oryx_16bit_fantasy_world_trans.png" id="3_3gnar"]

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_fwl2d"]
polygon = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_oorc3"]
texture = ExtResource("3_3gnar")
texture_region_size = Vector2i(24, 24)
15:24/0 = 0
15:24/0/modulate = Color(0.33288, 0.332881, 0.332881, 1)
15:24/0/terrain_set = 0
15:24/0/terrain = 0
15:24/0/terrains_peering_bit/right_side = 0
15:24/0/terrains_peering_bit/bottom_right_corner = 0
15:24/0/terrains_peering_bit/bottom_side = 0
15:24/0/terrains_peering_bit/bottom_left_corner = 0
15:24/0/terrains_peering_bit/left_side = 0
15:24/0/terrains_peering_bit/top_left_corner = 0
15:24/0/terrains_peering_bit/top_side = 0
15:24/0/terrains_peering_bit/top_right_corner = 0
16:24/0 = 0
16:24/0/modulate = Color(0.33288, 0.332881, 0.332881, 1)
16:24/0/terrain_set = 0
16:24/0/terrain = 0
16:24/0/terrains_peering_bit/right_side = 0
16:24/0/terrains_peering_bit/bottom_right_corner = 0
16:24/0/terrains_peering_bit/bottom_side = 0
16:24/0/terrains_peering_bit/bottom_left_corner = 0
16:24/0/terrains_peering_bit/left_side = 0
16:24/0/terrains_peering_bit/top_left_corner = 0
16:24/0/terrains_peering_bit/top_side = 0
16:24/0/terrains_peering_bit/top_right_corner = 0
17:24/0 = 0
17:24/0/modulate = Color(0.33288, 0.332881, 0.332881, 1)
17:24/0/terrain_set = 0
17:24/0/terrain = 0
17:24/0/terrains_peering_bit/right_side = 0
17:24/0/terrains_peering_bit/bottom_right_corner = 0
17:24/0/terrains_peering_bit/bottom_side = 0
17:24/0/terrains_peering_bit/bottom_left_corner = 0
17:24/0/terrains_peering_bit/left_side = 0
17:24/0/terrains_peering_bit/top_left_corner = 0
17:24/0/terrains_peering_bit/top_side = 0
17:24/0/terrains_peering_bit/top_right_corner = 0
17:25/0 = 0
17:25/0/modulate = Color(0.33288, 0.332881, 0.332881, 1)
17:25/0/terrain_set = 0
17:25/0/terrain = 0
17:25/0/probability = 20.0
17:25/0/terrains_peering_bit/right_side = 0
17:25/0/terrains_peering_bit/bottom_right_corner = 0
17:25/0/terrains_peering_bit/bottom_side = 0
17:25/0/terrains_peering_bit/bottom_left_corner = 0
17:25/0/terrains_peering_bit/left_side = 0
17:25/0/terrains_peering_bit/top_left_corner = 0
17:25/0/terrains_peering_bit/top_side = 0
17:25/0/terrains_peering_bit/top_right_corner = 0
16:25/0 = 0
16:25/0/modulate = Color(0.33288, 0.332881, 0.332881, 1)
16:25/0/terrain_set = 0
16:25/0/terrain = 0
16:25/0/terrains_peering_bit/right_side = 0
16:25/0/terrains_peering_bit/bottom_right_corner = 0
16:25/0/terrains_peering_bit/bottom_side = 0
16:25/0/terrains_peering_bit/bottom_left_corner = 0
16:25/0/terrains_peering_bit/left_side = 0
16:25/0/terrains_peering_bit/top_left_corner = 0
16:25/0/terrains_peering_bit/top_side = 0
16:25/0/terrains_peering_bit/top_right_corner = 0
15:25/0 = 0
15:25/0/modulate = Color(0.33288, 0.332881, 0.332881, 1)
15:25/0/terrain_set = 0
15:25/0/terrain = 0
15:25/0/terrains_peering_bit/right_side = 0
15:25/0/terrains_peering_bit/bottom_right_corner = 0
15:25/0/terrains_peering_bit/bottom_side = 0
15:25/0/terrains_peering_bit/bottom_left_corner = 0
15:25/0/terrains_peering_bit/left_side = 0
15:25/0/terrains_peering_bit/top_left_corner = 0
15:25/0/terrains_peering_bit/top_side = 0
15:25/0/terrains_peering_bit/top_right_corner = 0
10:18/0 = 0
10:18/0/terrain_set = 0
10:18/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_fwl2d")
10:18/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
10:19/0 = 0

[sub_resource type="TileSet" id="TileSet_spr2y"]
tile_size = Vector2i(24, 24)
occlusion_layer_0/light_mask = 1
physics_layer_0/collision_layer = 3
physics_layer_0/collision_mask = 3
terrain_set_0/mode = 0
terrain_set_0/terrain_0/name = "Ground"
terrain_set_0/terrain_0/color = Color(0, 0.798515, 0.683304, 1)
sources/0 = SubResource("TileSetAtlasSource_oorc3")

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_3sbbh"]
polygon = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_4c3tt"]
texture = ExtResource("3_3gnar")
texture_region_size = Vector2i(24, 24)
10:18/0 = 0
10:18/0/terrain_set = 0
10:18/0/terrain = 0
10:18/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_3sbbh")
10:18/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
10:18/0/terrains_peering_bit/right_side = 0
10:18/0/terrains_peering_bit/bottom_right_corner = 0
10:18/0/terrains_peering_bit/bottom_side = 0
10:18/0/terrains_peering_bit/bottom_left_corner = 0
10:18/0/terrains_peering_bit/left_side = 0
10:18/0/terrains_peering_bit/top_left_corner = 0
10:18/0/terrains_peering_bit/top_side = 0
10:18/0/terrains_peering_bit/top_right_corner = 0
10:19/0 = 0
10:19/0/terrain_set = 0
10:19/0/terrain = 0
10:19/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_3sbbh")
10:19/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
10:19/0/terrains_peering_bit/right_side = 0
10:19/0/terrains_peering_bit/bottom_right_corner = 0
10:19/0/terrains_peering_bit/bottom_side = 0
10:19/0/terrains_peering_bit/bottom_left_corner = 0
10:19/0/terrains_peering_bit/left_side = 0
10:19/0/terrains_peering_bit/top_left_corner = 0
10:19/0/terrains_peering_bit/top_side = 0
10:19/0/terrains_peering_bit/top_right_corner = 0

[sub_resource type="TileSet" id="TileSet_xl0if"]
tile_size = Vector2i(24, 24)
occlusion_layer_0/light_mask = 1
physics_layer_0/collision_layer = 7
physics_layer_0/collision_mask = 3
terrain_set_0/mode = 0
terrain_set_0/terrain_0/name = "Walls"
terrain_set_0/terrain_0/color = Color(0.167726, 0.677749, 1, 1)
sources/0 = SubResource("TileSetAtlasSource_4c3tt")

[node name="World" type="Node2D" groups=["world"]]

[node name="Camera" type="Camera2D" parent="."]
position = Vector2(577, 326)

[node name="EnemySpawner" type="Node2D" parent="Camera"]
script = ExtResource("2_chj1s")

[node name="SpawnPoints" type="Node2D" parent="Camera/EnemySpawner"]

[node name="Marker2D17" type="Marker2D" parent="Camera/EnemySpawner/SpawnPoints"]
position = Vector2(-217, 394)

[node name="Marker2D20" type="Marker2D" parent="Camera/EnemySpawner/SpawnPoints"]
position = Vector2(214, 395)
rotation = 2.81944

[node name="Marker2D22" type="Marker2D" parent="Camera/EnemySpawner/SpawnPoints"]
position = Vector2(359, 394)
rotation = 2.81944

[node name="Marker2D27" type="Marker2D" parent="Camera/EnemySpawner/SpawnPoints"]
position = Vector2(-359, 394)
rotation = 2.81944

[node name="Marker2D31" type="Marker2D" parent="Camera/EnemySpawner/SpawnPoints"]
position = Vector2(-505, 394)
rotation = 2.81944

[node name="Marker2D33" type="Marker2D" parent="Camera/EnemySpawner/SpawnPoints"]
position = Vector2(-649, 226)
rotation = 2.81944

[node name="Marker2D36" type="Marker2D" parent="Camera/EnemySpawner/SpawnPoints"]
position = Vector2(-649, 83)
rotation = 2.81944

[node name="Marker2D37" type="Marker2D" parent="Camera/EnemySpawner/SpawnPoints"]
position = Vector2(-649, -62)
rotation = 2.81944

[node name="Marker2D41" type="Marker2D" parent="Camera/EnemySpawner/SpawnPoints"]
position = Vector2(-648, -207)
rotation = 2.81944

[node name="Marker2D18" type="Marker2D" parent="Camera/EnemySpawner/SpawnPoints"]
position = Vector2(-241.348, -398.348)

[node name="Marker2D21" type="Marker2D" parent="Camera/EnemySpawner/SpawnPoints"]
position = Vector2(189.652, -397.348)
rotation = 2.81944

[node name="Marker2D23" type="Marker2D" parent="Camera/EnemySpawner/SpawnPoints"]
position = Vector2(334.652, -398.348)
rotation = 2.81944

[node name="Marker2D28" type="Marker2D" parent="Camera/EnemySpawner/SpawnPoints"]
position = Vector2(-383.348, -398.348)
rotation = 2.81944

[node name="Marker2D32" type="Marker2D" parent="Camera/EnemySpawner/SpawnPoints"]
position = Vector2(-529.348, -398.348)
rotation = 2.81944

[node name="Marker2D19" type="Marker2D" parent="Camera/EnemySpawner/SpawnPoints"]
position = Vector2(-97, -398)

[node name="Marker2D24" type="Marker2D" parent="Camera/EnemySpawner/SpawnPoints"]
position = Vector2(47, -398)

[node name="Marker2D25" type="Marker2D" parent="Camera/EnemySpawner/SpawnPoints"]
position = Vector2(455, -398)

[node name="Marker2D34" type="Marker2D" parent="Camera/EnemySpawner/SpawnPoints"]
position = Vector2(645.652, 226.652)
rotation = 2.81944

[node name="Marker2D38" type="Marker2D" parent="Camera/EnemySpawner/SpawnPoints"]
position = Vector2(645.652, 83.6517)
rotation = 2.81944

[node name="Marker2D39" type="Marker2D" parent="Camera/EnemySpawner/SpawnPoints"]
position = Vector2(645.652, -61.3483)
rotation = 2.81944

[node name="Marker2D42" type="Marker2D" parent="Camera/EnemySpawner/SpawnPoints"]
position = Vector2(646.652, -206.348)
rotation = 2.81944

[node name="Marker2D26" type="Marker2D" parent="Camera/EnemySpawner/SpawnPoints"]
position = Vector2(71, 394)

[node name="Marker2D29" type="Marker2D" parent="Camera/EnemySpawner/SpawnPoints"]
position = Vector2(-73, 394)

[node name="Marker2D30" type="Marker2D" parent="Camera/EnemySpawner/SpawnPoints"]
position = Vector2(503, 393)
rotation = 2.81944

[node name="SpawnTimer" type="Timer" parent="Camera/EnemySpawner"]
wait_time = 2.0
one_shot = true
autostart = true

[node name="Player" parent="." instance=ExtResource("1_rqn8p")]
position = Vector2(577, 326)

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Player"]
remote_path = NodePath("../../Camera")

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color(0.306923, 0.306923, 0.306923, 1)

[node name="TilemapFloor" type="TileMapLayer" parent="."]
z_index = -5
use_parent_material = true
tile_set = SubResource("TileSet_spr2y")

[node name="TilemapWalls" type="TileMapLayer" parent="."]
tile_set = SubResource("TileSet_xl0if")

[connection signal="timeout" from="Camera/EnemySpawner/SpawnTimer" to="Camera/EnemySpawner" method="_on_spawn_timer_timeout"]
